{
    "name": "InputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "3bcb8e13-dc29-46b2-b670-cf972f5afabc",
            "actions": [
                {
                    "name": "CameraMoveInputs",
                    "type": "Value",
                    "id": "805359cf-2c29-471c-9ae6-b3d3fdac0284",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotateInputs",
                    "type": "Value",
                    "id": "4646b48a-1fb7-4021-8833-2eb6387adb36",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoomInputs",
                    "type": "Value",
                    "id": "13b43bec-0eba-41a1-a6a8-84e8920ce82d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef72bfad-6f5d-451f-a752-f8ec282bcdf0",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoomInputs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "dff63624-44cc-46bb-8488-6e7ceadb4de3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveInputs",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "014fa367-6447-4be7-bbef-c277df89413d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f52a78f6-118a-4b34-b783-c766b02c7d18",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2505365e-9f44-4ce1-a1f8-33430a5f18e5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "63ac1238-ea36-447f-816e-ccaee2384584",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "803a42f0-6a55-400b-9f29-556792532e30",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateInputs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39460e90-fafb-44a3-b3df-73eab8be8eb3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "CameraRotateInputs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}